Animated Wave Overflow Issue Solved

--- a/Animation.css
+++ b/Animation.css
@@ -168,7 +168,6 @@ main {
 }
 body {
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 /*waves*/
